--- a/app/src/main/res/layout/content_menu_principal.xml
+++ b/app/src/main/res/layout/content_menu_principal.xml
@@ -1,11 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MenuPrincipalActivity"
-    tools:showIn="@layout/app_bar_menu_principal">
+    tools:showIn="@layout/app_bar_menu_principal"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
+
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="150dp">
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_menus"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            card_view:cardCornerRadius="4dp"
+            android:layout_margin="3dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="113dp"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/menu"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="Menus"
+                android:gravity="center"
+                android:layout_gravity="bottom"
+                android:textColor="@color/negro"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_carrito"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            card_view:cardCornerRadius="4dp"
+            android:layout_margin="3dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="113dp"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/cart"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="Carrito"
+                android:gravity="center"
+                android:layout_gravity="bottom"
+                android:textColor="@color/negro"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_reserva"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            card_view:cardCornerRadius="4dp"
+            android:layout_margin="3dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="113dp"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/booked"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="Reserva"
+                android:gravity="center"
+                android:layout_gravity="bottom"
+                android:textColor="@color/negro"/>
+
+        </android.support.v7.widget.CardView>
+
+    </TableRow>
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_mapa"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        card_view:cardCornerRadius="4dp"
+        android:layout_margin="3dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="121dp"
+            android:background="@color/colorPrimary"
+            android:src="@drawable/map"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="Mapa"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:textColor="@color/negro"/>
+
+    </android.support.v7.widget.CardView>
+</LinearLayout>
