--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:id="@+id/usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Usuario"/>
+        android:hint="Email"/>
 
     <EditText
         android:id="@+id/pasword"
@@ -26,5 +26,12 @@
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Iniciar Sesion"/>
+        android:text="Iniciar Sesion"
+        android:layout_margin="10dp"/>
+    <Button
+        android:id="@+id/provisional"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Prueba"
+        android:layout_margin="10dp"/>
 </LinearLayout>
