--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,22 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:text="Iniciar Sesion"/>
+        android:text="Iniciar Sesion"
+        android:gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="310dp"
+        android:layout_gravity="center"
+        />
 
     <Button
         android:id="@+id/btnRegistro"
-        android:layout_width="match_parent"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:text="Crear Cuenta"/>
+        android:text="Crear Cuenta"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
