--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="negro">#000000</color>
     <color name="blanco">#ffffff</color>
+    <color name="gris">#4b4848</color>
+    <color name="veig">#fff9f9</color>
 </resources>
