--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,27 +7,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorRL"
+    android:padding="25dp">
 
     <EditText
-        android:id="@+id/usuario"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"/>
+        android:hint="Email"
+        android:layout_marginTop="30dp"
+        android:inputType="textEmailAddress"
+        android:textColorHint="@color/colorRLText"
+        android:backgroundTint="@color/colorRLText"/>
 
     <EditText
         android:id="@+id/pasword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:hint="Contraseña"/>
+        android:hint="Contraseña"
+        android:layout_marginTop="12dp"
+        android:lines="1"
+        android:textColorHint="@color/colorRLText"
+        android:backgroundTint="@color/colorRLText"/>
+
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Iniciar Sesion"
-        android:layout_margin="10dp"/>
+        android:background="@color/colorRLButton"
+        android:layout_marginTop="60dp"
+        android:textColor="@color/colorRLText"
+        android:textStyle="bold"/>
     <Button
         android:id="@+id/provisional"
         android:layout_width="match_parent"
