--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorRL"
+    android:padding="25dp">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logoinicio"
+        android:layout_gravity="center"/>
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="230dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Iniciar Sesion"
-        android:gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="310dp"
-        android:layout_gravity="center"
-        />
+        android:background="@color/colorRLButton"
+        android:textColor="@color/colorRLText"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnRegistro"
-        android:layout_width="230dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Crear Cuenta"
-        android:layout_margin="10dp"
-        android:layout_gravity="center"/>
+        android:background="@color/colorRLButton"
+        android:layout_marginTop="25dp"
+        android:textColor="@color/colorRLText"
+        android:textStyle="bold"/>
+    </LinearLayout>
+
 
 </LinearLayout>
