--- a/app/src/main/res/layout/content_cafe.xml
+++ b/app/src/main/res/layout/content_cafe.xml
@@ -44,7 +44,7 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:layout_width="match_parent"
-                        android:text="@string/pos1"
+                        android:text="@string/c1"
                         android:gravity="top"
                         android:paddingLeft="15dp"
                         android:layout_gravity="bottom"
@@ -76,7 +76,7 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:layout_width="match_parent"
-                        android:text="@string/pos2"
+                        android:text="@string/c2"
                         android:gravity="top"
                         android:paddingLeft="15dp"
                         android:layout_gravity="bottom"
@@ -114,7 +114,7 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:layout_width="match_parent"
-                        android:text="@string/pos3"
+                        android:text="@string/c3"
                         android:gravity="top"
                         android:paddingLeft="15dp"
                         android:layout_gravity="bottom"
@@ -146,7 +146,7 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:layout_width="match_parent"
-                        android:text="@string/pos4"
+                        android:text="@string/c4"
                         android:gravity="top"
                         android:paddingLeft="15dp"
                         android:layout_gravity="bottom"
@@ -184,7 +184,7 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:layout_width="match_parent"
-                        android:text="@string/pos5"
+                        android:text="@string/c5"
                         android:gravity="top"
                         android:paddingLeft="15dp"
                         android:layout_gravity="bottom"
@@ -216,147 +216,7 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:layout_width="match_parent"
-                        android:text="@string/pos6"
-                        android:gravity="top"
-                        android:paddingLeft="15dp"
-                        android:layout_gravity="bottom"
-                        android:textColor="@color/gris"
-                        android:textStyle="bold"
-                        android:textSize="16dp"
-                        android:background="@color/veig"/>
-
-                </android.support.v7.widget.CardView>
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="207dp">
-
-                <android.support.v7.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_p7"
-                    android:layout_weight="1"
-                    android:layout_height="200dp"
-                    card_view:cardCornerRadius="4dp"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="3dp"
-                    android:layout_marginTop="6dp">
-
-                    <ImageView
-                        android:id="@+id/img7"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
-                    <TextView
-                        android:layout_weight="1"
-                        android:layout_height="50dp"
-                        android:layout_width="match_parent"
-                        android:text="@string/pos7"
-                        android:gravity="top"
-                        android:paddingLeft="15dp"
-                        android:layout_gravity="bottom"
-                        android:textColor="@color/gris"
-                        android:textStyle="bold"
-                        android:textSize="16dp"
-                        android:background="@color/veig"/>
-
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_p8"
-                    android:layout_weight="1"
-                    android:layout_height="200dp"
-                    card_view:cardCornerRadius="4dp"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="3dp"
-                    android:layout_marginTop="6dp">
-
-                    <ImageView
-                        android:id="@+id/img8"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
-                    <TextView
-                        android:layout_weight="1"
-                        android:layout_height="50dp"
-                        android:layout_width="match_parent"
-                        android:text="@string/pos8"
-                        android:gravity="top"
-                        android:paddingLeft="15dp"
-                        android:layout_gravity="bottom"
-                        android:textColor="@color/gris"
-                        android:textStyle="bold"
-                        android:textSize="16dp"
-                        android:background="@color/veig"/>
-
-                </android.support.v7.widget.CardView>
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="212dp">
-
-                <android.support.v7.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_p9"
-                    android:layout_weight="1"
-                    android:layout_height="200dp"
-                    card_view:cardCornerRadius="4dp"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="3dp"
-                    android:layout_marginTop="6dp">
-
-                    <ImageView
-                        android:id="@+id/img9"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
-                    <TextView
-                        android:layout_weight="1"
-                        android:layout_height="50dp"
-                        android:layout_width="match_parent"
-                        android:text="@string/pos9"
-                        android:gravity="top"
-                        android:paddingLeft="15dp"
-                        android:layout_gravity="bottom"
-                        android:textColor="@color/gris"
-                        android:textStyle="bold"
-                        android:textSize="16dp"
-                        android:background="@color/veig"/>
-
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_p10"
-                    android:layout_weight="1"
-                    android:layout_height="200dp"
-                    card_view:cardCornerRadius="4dp"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="3dp"
-                    android:layout_marginTop="6dp">
-
-                    <ImageView
-                        android:id="@+id/img10"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
-                    <TextView
-                        android:layout_weight="1"
-                        android:layout_height="50dp"
-                        android:layout_width="match_parent"
-                        android:text="@string/pos10"
+                        android:text="@string/c6"
                         android:gravity="top"
                         android:paddingLeft="15dp"
                         android:layout_gravity="bottom"
