--- a/app/src/main/res/layout/content_cafe.xml
+++ b/app/src/main/res/layout/content_cafe.xml
@@ -37,9 +37,7 @@
                         android:id="@+id/img1"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -69,9 +67,7 @@
                         android:id="@+id/img2"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -107,9 +103,7 @@
                         android:id="@+id/img3"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -139,9 +133,7 @@
                         android:id="@+id/img4"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -177,9 +169,7 @@
                         android:id="@+id/img5"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -209,9 +199,7 @@
                         android:id="@+id/img6"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
