--- a/app/src/main/res/layout/content_primeros.xml
+++ b/app/src/main/res/layout/content_primeros.xml
@@ -38,9 +38,7 @@
                         android:id="@+id/img1"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop"/>
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -70,9 +68,7 @@
                         android:id="@+id/img2"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -108,9 +104,7 @@
                         android:id="@+id/img3"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -140,9 +134,7 @@
                         android:id="@+id/img4"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -178,9 +170,7 @@
                         android:id="@+id/img5"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -210,9 +200,7 @@
                         android:id="@+id/img6"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -248,9 +236,7 @@
                         android:id="@+id/img7"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -280,9 +266,7 @@
                         android:id="@+id/img8"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -318,9 +302,7 @@
                         android:id="@+id/img9"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
@@ -350,9 +332,7 @@
                         android:id="@+id/img10"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:paddingTop="8dp"
-                        android:paddingBottom="8dp"/>
+                        android:scaleType="centerCrop" />
                     <TextView
                         android:layout_weight="1"
                         android:layout_height="50dp"
